--- a/styles/Writing.module.sass
+++ b/styles/Writing.module.sass
@@ -16,8 +16,11 @@
       width: 150px
       .listBtn
         color: #fff
-        background-color: $color-blue-3
+        background-color: $color-gray
         @include textCenter(40px)
-        
+      .listBtnActive
+        background-color: $color-blue-3
+        color: #fff
+        @include textCenter(40px)
   .footer
     height: 30px
