--- a/styles/globalVar.module.sass
+++ b/styles/globalVar.module.sass
@@ -4,6 +4,8 @@ $color-blue-1: #E8F3FF
 $color-blue-2: #BEDAFF
 $color-blue-3: #6AA1FF
 $color-blue-4: #165DFF
+$color-dark: #4f4f4f
+$color-theme: #2b2b2b
 // center
 @mixin flex($direction)
   display: flex
