--- a/pages/components/menu/login.module.sass
+++ b/pages/components/menu/login.module.sass
@@ -11,9 +11,8 @@
     height: 40px
     font-size: 20px
 .avatar
-  margin: 0 20px 0 40px
+  margin-left: 0.2rem
 .avatar:hover
   cursor: pointer
 .lBtn
   background: #fff!important
-  margin: 0 20px
