--- a/styles/globalVar.module.sass
+++ b/styles/globalVar.module.sass
@@ -1,11 +1,13 @@
 // color
+$color-white: #fff
 $color-gray: #E5E6EB
 $color-blue-1: #E8F3FF
 $color-blue-2: #BEDAFF
 $color-blue-3: #6AA1FF
 $color-blue-4: #165DFF
+$color-dark-1: #666666
 $color-dark: #4f4f4f
-$color-theme: #2b2b2b
+$color-theme: #72eee6
 // center
 @mixin flex($direction)
   display: flex
@@ -17,4 +19,19 @@ $color-theme: #2b2b2b
   height: $height
   line-height: $height
   text-align: center
+
+@mixin panel()
+  vertical-align: -0.15em
+  fill: currentColor
+  overflow: hidden
+  width: 0.3rem
+  height: 0.3rem
+
+@mixin panel-small()
+    vertical-align: -0.15em
+    fill: currentColor
+    overflow: hidden
+    width: 0.1rem
+    height: 0.1rem
+  
 
