--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -1,5 +1,7 @@
 .main
   background-color: $color-gray
   display: flex
-  .article-list
-    flex: 1
+  .empty
+    height: 92vh
+    display: flex
+    align-items: center
