--- a/styles/globalVar.module.sass
+++ b/styles/globalVar.module.sass
@@ -1,10 +1,16 @@
 // color
 $color-white: #fff
+$color-gray-1: #f5f5f5
 $color-gray: #E5E6EB
+$color-green: #bef9df
+$color-orange-1: #f9ecbe
+$color-orange: #f7b0b0
 $color-blue-1: #E8F3FF
 $color-blue-2: #BEDAFF
 $color-blue-3: #6AA1FF
 $color-blue-4: #165DFF
+$color-dark-3: #b2b7b8
+$color-dark-2: #ededed
 $color-dark-1: #666666
 $color-dark: #4f4f4f
 $color-theme: #72eee6
@@ -24,14 +30,20 @@ $color-theme: #72eee6
   vertical-align: -0.15em
   fill: currentColor
   overflow: hidden
-  width: 0.3rem
-  height: 0.3rem
+  width: 30px
+  height: 30px
 
 @mixin panel-small()
     vertical-align: -0.15em
     fill: currentColor
     overflow: hidden
-    width: 0.1rem
-    height: 0.1rem
+    width: 0.15rem
+    height: 0.15rem
+    min-width: 20px
+    min-height: 20px
   
-
+@mixin empty-center()
+  height: 100%
+  display: flex
+  align-items: center
+  
