--- a/components/column-entry/column-entry.module.sass
+++ b/components/column-entry/column-entry.module.sass
@@ -1,17 +1,23 @@
 .columnEntry
   display: flex
-  padding: 10px 10px
+  padding: 10px
   border-top: 1px solid $color-gray
   border-bottom: none
   cursor: pointer
   position: relative
   justify-content: space-between
+  width: 730px
   .colunmNums
     width: 30px
     height: 95px
     background-color: rgba(79, 79, 79, 0.9)
     position: absolute
     left: 0
+    color: #fff
+    line-height: 95px 
+    text-align: center
+    font-weight: 400
+    font-size: 15px
   .entryContent
     display: flex
     .colunmDesc
@@ -22,7 +28,8 @@
 .columnEntry:hover
   background-color: $color-dark-2
 .empty
-  width: 750px
+  width: 840px
+  background-color: #fff
 
 
 
