--- a/components/recommend-article/recommend-article.module.sass
+++ b/components/recommend-article/recommend-article.module.sass
@@ -1,9 +1,23 @@
 .wrapper
   // transform: translateX(30%)
   width: 100%
-  max-width: 720px
+  max-width: 740px
   background-color: $color-white
-  margin: 20px 0 0.1rem 20%
+  margin: 20px 0 0.1rem 15%
   .listHader
     display: flex
     align-items: center
+.skeleton
+  margin: 20px 0 0.1rem 15%
+  background-color: #fff
+  width: 100%
+  max-width: 740px
+  padding-top: 40px
+.empty
+  background-color: #fff
+  width: 100%
+  max-width: 740px
+  margin: 20px 0 0.1rem 15%
+  display: flex
+  align-items: center
+  
