--- a/pages/user/collection.module.sass
+++ b/pages/user/collection.module.sass
@@ -27,6 +27,8 @@
     font-size: 20px
   .entryDesc
     color: $color-dark-3
+.render
+  border-top: 1px solid $color-dark-2
 .empty
   @include empty-center
   height: 300px
