--- a/pages/user/records.module.sass
+++ b/pages/user/records.module.sass
@@ -4,7 +4,6 @@
   height: 89vh
   .recordsContent
     width: 750px
-    height: 500px
     margin: 0 auto
     background-color: #fff
     .bread
@@ -16,21 +15,23 @@
         font-size: 20px
         font-weight: 600
         color: $color-dark
-.contentMain
-  padding: 10px 10px 0 10px
-  border-top: 1px solid $color-dark-3
-  .contentHead
-    display: flex
-    .contentTitle
-      font-weight: 600
-      color: $color-dark
-      font-size: 20px
-      margin-left: 10px
-  .contentDesc
-    color: $color-dark-3
+.contentWrapper        
+  background-color: #fff
+  .contentMain
+    padding: 10px 10px 0 10px
+    border-top: 1px solid $color-dark-2
+    .contentHead
+      display: flex
+      .contentTitle
+        font-weight: 600
+        color: $color-dark
+        font-size: 20px
+        margin-left: 10px
+    .contentDesc
+      color: $color-dark-3
 .infoWrapper
   font-size: 12px
-  padding: 10px
+  padding: 10px 0 20px 10px
   .authorName
     color: $color-dark
   .editTime
