--- a/styles/Writing.module.sass
+++ b/styles/Writing.module.sass
@@ -1,6 +1,7 @@
 .wrapper
   height: 100%
   min-height: 330
+  background-color: #fff
   .header
     display: flex
     justify-content: space-between
@@ -19,7 +20,7 @@
         background-color: $color-gray
         @include textCenter(40px)
       .listBtnActive
-        background-color: $color-blue-3
+        background-color: $color-primary-blue
         color: #fff
         @include textCenter(40px)
   .footer
