--- a/components/recommend-article/virtual-list.module.sass
+++ b/components/recommend-article/virtual-list.module.sass
@@ -1,8 +1,11 @@
-.list
+
+.listItem
+  display: flex
+  flex-direction: column
   width: 100%
-  .listItem
-    display: flex
-    flex-direction: column
-    width: 100%
-  .listItem:hover
-    background-color: $color-dark-2  
+  padding: 10px 0
+  height: 120px
+  background-color: #fff
+  border-top: 1px solid $color-dark-2
+.listItem:hover
+  background-color: $color-dark-2  
