--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #E5E6EB;
+  scrollbar-gutter: stable;
 }
 
 a {
@@ -15,3 +17,24 @@ a {
 /* * {
   box-sizing: border-box;
 } */
+
+/* 修改滚动条 */
+body{
+  margin: 0;
+  overflow: overlay;
+}
+::-webkit-scrollbar{
+  background-color: transparent;
+  width: 12px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: transparent;
+  border-radius: 8px;
+  background-clip: content-box;
+  border: 2px solid transparent;
+}
+body[scroll]::-webkit-scrollbar-thumb,
+::-webkit-scrollbar-thumb:hover{
+  background-color: rgba(0,0,0,.5);
+
+} 
